<resources>
    <string name="app_name">ICCET2020</string>
    <string name="sign_in">Вход</string>
    <string name="registrait">Зарегистрироваться</string>
    <string name="take_note">Запись на прием</string>
    <string name="btnTakeNoteText">Записаться</string>
    <string name="registration">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="name_of_father">Отчество</string>
    <string name="data">Дата рождения</string>
    <string name="snils">СНИЛС</string>
    <string name="phone">Телефон</string>
    <string name="polis">Серия полиса ОМС</string>
    <string name="polis_number">Номер полиса ОМС</string>
    <string name="enter_oblast">Пожалуйста выберите область</string>
    <string name="whoWillGo">Кому необходимо записаться на прием</string>
    <string name="title_activity_maps">Map</string>
    <string name="seriaOMS">Серия полиса ОМС (При наличии)</string>
    <string name="nomerOMS">Номер полиса ОМС</string>
    <string name="line_distance_textview">0.0 km</string>
    <string name="chooseDoctor">Выберите врача</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZmVzaGFydDUwMCIsImEiOiJja2kwcTQyc3MwaXY4Mnltc3RjdGo0cWV1In0.nciMMKY38q8p37kx3uwzmw</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_menu_main">MenuMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_menu228666">MainMenuActivity228666</string>
    <string name="title_activity_main_menu666">MainMenuActivity666</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_not_available">service_not_available</string>
    <string name="invalid_lat_long_used">invalid_lat_long_used</string>
    <string name="no_location_data_provided">no_location_data_provided</string>
    <string name="no_geocoder_available">ada</string>
    <string name="no_location_detected">location_detected</string>
    <string name="permission_rationale">permission_</string>
</resources>