<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TakeNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


        <LinearLayout

            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.416">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:inputType="text"
                android:paddingTop="10dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingTop="10dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_of_father"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_father"
                android:inputType="text"
                android:paddingTop="10dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/data"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/data"
                android:inputType="text"
                android:paddingTop="10dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/snils"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/snils"
                android:inputType="number"
                android:paddingTop="10dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingTop="10dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="number"
                android:paddingTop="10dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/polis"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/polis"
                android:inputType="number"
                android:paddingTop="10dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/polis_number"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/polis_number"
                android:inputType="number"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooseDoctor"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.64" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="297dp"
                android:layout_height="38dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "Выберите удобное время записи "
                android:textStyle = "bold"
                android:textSize = "18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.75"/>

            <ListView
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:id="@+id/listView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.87" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registration_btn"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/btnTakeNoteText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.98"/>


        </LinearLayout>


        </LinearLayout>
    </ScrollView>






</androidx.constraintlayout.widget.ConstraintLayout>
