<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="363dp"
                android:layout_height="625dp"
                android:background="@drawable/back"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="Редактирование профиля"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/surname"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:enabled="false"
                    android:hint="@string/surname"
                    android:inputType="text"
                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingTop="10dp"
                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_of_father"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/name_of_father"
                    android:inputType="text"
                    android:paddingTop="10dp"
                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/data"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/data"
                    android:inputType="text"
                    android:paddingTop="10dp"
                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/snils"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/snils"
                    android:inputType="number"
                    android:paddingTop="10dp"
                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingTop="10dp"
                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:paddingTop="10dp"
                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/polis"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/polis"
                    android:inputType="number"
                    android:paddingTop="10dp"
                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/polis_number"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"

                    android:enabled="false"
                    android:hint="@string/polis_number"
                    android:inputType="number"
                    android:paddingTop="10dp"
                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/changedBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="Изменить"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>