<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TakeNoteActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="354dp"
                android:layout_height="781dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/back"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/surname"
                    android:inputType="text"

                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/name"
                    android:inputType="text"

                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_of_father"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/name_of_father"
                    android:inputType="text"

                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/data"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/data"
                    android:inputType="text"

                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/snils"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/snils"
                    android:inputType="number"

                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"

                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/phone"
                    android:inputType="number"

                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/polis"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/polis"
                    android:inputType="number"

                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/polis_number"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/polis_number"

                    android:inputType="number"

                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="297dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center" />


                <ListView
                    android:id="@+id/listView"
                    android:layout_width="320dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scrollView2"
                    app:layout_constraintVertical_bias="0.7" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/openCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    app:backgroundTint="#3d7894"
                    android:text="Выбрать дату записи" />


                <com.google.android.material.button.MaterialButton
                    app:backgroundTint="#3d7894"
                    android:id="@+id/registration_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Записаться"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>